--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">ARTrack</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="button_main">Pulse en la imagen para comenzar el entrenamiento</string>
     <string name="action_settings">Settings</string>
 
 </resources>
