--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,13 @@
 <resources>
 
     <string name="app_name">ARTrack</string>
-    <string name="button_main">Pulse en la imagen para comenzar el entrenamiento</string>
     <string name="action_settings">Settings</string>
+    <string name="text_main">Pulse en la imagen para comenzar el entrenamiento</string>
+    <string name="button_calculation">Finalizar entrenamiento</string>
+    <string name="button_map">Ver recorrido en el mapa</string>
+    <string name="button_main">Nuevo entrenamiento</string>
+    <string name="title_activity_calculation">CalculationActivity</string>
+    <string name="title_activity_result">ResultActivity</string>
+    <string name="title_activity_map">MapActivity</string>
 
 </resources>
