Añadida modificación en BBDD para añadir los puntos y mapa en MapActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="title_activity_calculation">CalculationActivity</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="dist_rec">Distancia recorrida: </string>
+    <string name="vel_media">Velocidad media: </string>
 
 </resources>
