--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="text_main">Pulse en la imagen para comenzar el entrenamiento</string>
     <string name="titulo_calc">ESTADÍSTICAS EN EL ÚLTIMO INTERVALO</string>
     <string name="dist">Distancia recorrida (m): </string>
-    <string name="vel">Velocidad (m/s): </string>
-    <string name="ac">Aceleración (m/s^2): </string>
+    <string name="vel">Velocidad (km/h): </string>
+    <string name="ac">Estado de aceleración: </string>
     <string name="sin_valor">-</string>
     <string name="button_calculation">Finalizar entrenamiento</string>
     <string name="button_map">Ver recorrido en el mapa</string>
