--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="title_activity_calculation">CalculationActivity</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="title_activity_map">MapActivity</string>
-    <string name="dist_rec">Distancia recorrida: </string>
-    <string name="vel_media">Velocidad media: </string>
+    <string name="titulo_res">ESTADÍSTICAS FINALES</string>
+    <string name="dist_rec">Distancia recorrida (m): </string>
+    <string name="vel_media">Velocidad media (km/h): </string>
 
 </resources>
