Añadido el tiempo a la clase Point, y el mostrado de la duración en ResultActivity. También la creación de la Polyline y su adhesión al mapa. Falta por probar el funcionamiento de todo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="titulo_res">ESTADÍSTICAS FINALES</string>
     <string name="dist_rec">Distancia recorrida (m): </string>
     <string name="vel_media">Velocidad media (km/h): </string>
+    <string name="duracion">Duración (s): </string>
 
 </resources>
